changement du nb de carte a l'ecran

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <p id="second"> Pair founds : <span id="pairs">0</span> </p>
 
-    <p class="timer"> </div>
+    <p class="timer"> </p>
 
     <section class="game">
 
