amélioration css index.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,15 @@
 
       <h1> Memory Game </h1>
 
-      <p> choose the number of card you want :  </p>
+      <p id="p"> Choose the number of card you want :  </p>
 
       <nav>
 
         <ul class="nav">
 
-          <li> <a href="6.html">6 cartes </a> </li>
-          <li> <a href="18.html"> 18 cartes </a> </li>
-          <li> <a href="36.html"> 36 cartes </a> </li>
+          <li> <a href="6.html" id="lie">6 cartes </a> </li>
+          <li> <a href="18.html" id="lie"> 18 cartes </a> </li>
+          <li> <a href="36.html" id="lie"> 36 cartes </a> </li>
 
         </ul>
 
